--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/style.css">
   <style>
-.container1 {
-  position: relative;
-  text-align: right;
-  color: white;
+    .container1 {
+      position: relative;
+      text-align: right;
+      color: white;
 
-}
-.bottom-center {
+    }
 
-  position: absolute;
-  right: 1px;
-  top: 50%;
-  transform: translate(-0%, -50%);
-  font-size: 50px;
+    .bottom-center {
 
-}
-</style>
+      position: absolute;
+      right: 1px;
+      top: 50%;
+      transform: translate(-0%, -50%);
+      font-size: 50px;
+
+    }
+  </style>
 </head>
 
 <body>
@@ -65,12 +66,12 @@
   <section>
 
     <div class="container1" id="Home">
-  <img src="C:\Users\sweth\Downloads\ibm\images\bannerImage.jpg" style="width:100%;">
-  
-  <div class="bottom-center">I'm Harshini<br> A Frontend Developer</br></div>
-  
-</div>
-    
+      <img src="C:\Users\sweth\Downloads\ibm\images\bannerImage.jpg" style="width:100%;">
+
+      <div class="bottom-center">I'm Harshini<br> A Frontend Developer</br></div>
+
+    </div>
+
   </section>
   <!-- banner end-->
   <!-- about section start-->
@@ -84,7 +85,9 @@
           <img src="C:\Users\sweth\Downloads\ibm\images\harshini.png" alt="harshini" class="card-img img-fluid">
         </div>
         <div class="col-md-8">
-        <p> A front-end web developer is responsible for implementing visual elements that users see and interact with in a web application. They are usually supported by back-end web developers, who are responsible for server-side application logic and integration of the work front-end developers do.</p>
+          <p> A front-end web developer is responsible for implementing visual elements that users see and interact with
+            in a web application. They are usually supported by back-end web developers, who are responsible for
+            server-side application logic and integration of the work front-end developers do.</p>
           <div class="row">
             <div class="col-md-6">
               <ul>
@@ -103,10 +106,18 @@
           </div>
           <div class="row">
             <p>
-              A front-end web developer is probably what most people think of as a “web developer”. A front-end web developer is responsible for implementing visual elements that users see and interact with in a web application. They are usually supported by back-end web developers, who are responsible for server-side application logic and integration of the work front-end developers do.
-              Writing a good job description and a corresponding job ad requires proper separation of concerns. Posting a generic web developer job description in your ad when you are looking for an advanced front-end web developer, will bring numerous applications from people who are specialized in building back-end web services, or web designers who have absolutely no knowledge about programming.        
-              There are technologies and knowledge that are common to all web developer jobs. This article will provide you with a sample front-end web developer job description that will help you write a perfect job ad and assure that you easily find and hire the person that matches your specific criteria.
-             </p>
+              A front-end web developer is probably what most people think of as a “web developer”. A front-end web
+              developer is responsible for implementing visual elements that users see and interact with in a web
+              application. They are usually supported by back-end web developers, who are responsible for server-side
+              application logic and integration of the work front-end developers do.
+              Writing a good job description and a corresponding job ad requires proper separation of concerns. Posting
+              a generic web developer job description in your ad when you are looking for an advanced front-end web
+              developer, will bring numerous applications from people who are specialized in building back-end web
+              services, or web designers who have absolutely no knowledge about programming.
+              There are technologies and knowledge that are common to all web developer jobs. This article will provide
+              you with a sample front-end web developer job description that will help you write a perfect job ad and
+              assure that you easily find and hire the person that matches your specific criteria.
+            </p>
           </div>
         </div>
 
@@ -117,77 +128,88 @@
   <!-- about section end-->
 
   <!-- about services start-->
-    <section id="Services">
-      <div class="container">
-        <h1 class="text-center">Services</h1>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card my-3">
-              <div class="card-body">
-                <h5 class="card-title">Frontend Developer</h5>
-                <p class="card-text"> A front end developer has one general responsibility: to ensure that website visitors can easily interact with the page. They do this through the combination of design, technology and programming to code a website's appearance, as well as taking care of debugging.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card my-3">
-              <div class="card-body">
-                <h5 class="card-title">ARVR Developer</h5>
-                <p class="card-text">An AR/VR developer develops AR/VR games and immersive product configurators. Mixed Reality Artist: A mixed reality artist designs and creates technology that makes the interface between computers and humans more interactive.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card my-3">
-              <div class="card-body">
-                <h5 class="card-title">Machine Learning Developer </h5>
-                <p class="card-text">A machine learning (ML) developer is an expert on using data to training models. The models are then used to automate processes like image classification, speech recognition, and market forecasting. Definitions of machine learning roles can vary.</p>
-              </div>
+  <section id="Services">
+    <div class="container">
+      <h1 class="text-center">Services</h1>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card my-3">
+            <div class="card-body">
+              <h5 class="card-title">Frontend Developer</h5>
+              <p class="card-text"> A front end developer has one general responsibility: to ensure that website
+                visitors can easily interact with the page. They do this through the combination of design, technology
+                and programming to code a website's appearance, as well as taking care of debugging.</p>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-
-  <!-- services end-->
-
-      <!--  portfolio start-->
-<section id="portfolio">
-  <div class="container">
-    <h1 class="text-center">portfolio</h1>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="card mb-3">
-          <img src="C:\Users\sweth\Downloads\ibm\images\card-1 (1).jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">As per portfolio definition, it is a collection of a wide range of assets that are owned by investors. The said collection of financial assets may also be valuables ranging from gold, stocks, funds, derivatives, property, cash equivalents, bonds, etc.</p>
+        <div class="col-md-4">
+          <div class="card my-3">
+            <div class="card-body">
+              <h5 class="card-title">ARVR Developer</h5>
+              <p class="card-text">An AR/VR developer develops AR/VR games and immersive product configurators. Mixed
+                Reality Artist: A mixed reality artist designs and creates technology that makes the interface between
+                computers and humans more interactive.</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-6">
-        <div class="card mb-3">
-          <img src="C:\Users\sweth\Downloads\ibm\images\card-1 (2).jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">As per portfolio definition, it is a collection of a wide range of assets that are owned by investors. The said collection of financial assets may also be valuables ranging from gold, stocks, funds, derivatives, property, cash equivalents, bonds, etc.</p>
+        <div class="col-md-4">
+          <div class="card my-3">
+            <div class="card-body">
+              <h5 class="card-title">Machine Learning Developer </h5>
+              <p class="card-text">A machine learning (ML) developer is an expert on using data to training models. The
+                models are then used to automate processes like image classification, speech recognition, and market
+                forecasting. Definitions of machine learning roles can vary.</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+
+  <!-- services end-->
+
+  <!--  portfolio start-->
+  <section id="portfolio">
+    <div class="container">
+      <h1 class="text-center">portfolio</h1>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="card mb-3">
+            <img src="C:\Users\sweth\Downloads\ibm\images\card-1 (1).jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">As per portfolio definition, it is a collection of a wide range of assets that are
+                owned by investors. The said collection of financial assets may also be valuables ranging from gold,
+                stocks, funds, derivatives, property, cash equivalents, bonds, etc.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card mb-3">
+            <img src="C:\Users\sweth\Downloads\ibm\images\card-1 (2).jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">As per portfolio definition, it is a collection of a wide range of assets that are
+                owned by investors. The said collection of financial assets may also be valuables ranging from gold,
+                stocks, funds, derivatives, property, cash equivalents, bonds, etc.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
   <!-- portfolio end-->
 
-<!-- contact start-->
+  <!-- contact start-->
   <section id="Contact">
     <div class="container-fluid">
       <h1 class="'text-center">Connect with me!!</h1>
       <div class="row">
-        <div class="col-md-6"><iframe src="C:\Users\sweth\Downloads\ibm\images\telephone-fill.jpg" width='600 px' height='450 px' style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+        <div class="col-md-6"><iframe src="C:\Users\sweth\Downloads\ibm\images\telephone-fill.jpg" width='600 px'
+            height='450 px' style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe></div>
         <div class="col-md-6">
           <form>
             <div class="mb-3">
@@ -213,24 +235,24 @@
     </div>
   </section>
 
-<!-- contact end-->
-<!--footer start-->
-<footer id="'footer">
-  <div class="container-fluid bg-dark py-2">
-    <div class="mt-4 text-center px-1">
-      <a href="http://www.linkedin.com" target="_blank" rel="noopener-noreferrer">
-      <i class="bi bi-linkedin bIcon"></i></a>
-      <a href="http://www.twitter.com" target="_blank" rel="noopener-noreferrer">
-        <i class="bi bi-twitter bIcon"></i></a>
+  <!-- contact end-->
+  <!--footer start-->
+  <footer id="'footer">
+    <div class="container-fluid bg-dark py-2">
+      <div class="mt-4 text-center px-1">
+        <a href="http://www.linkedin.com" target="_blank" rel="noopener-noreferrer">
+          <i class="bi bi-linkedin bIcon"></i></a>
+        <a href="http://www.twitter.com" target="_blank" rel="noopener-noreferrer">
+          <i class="bi bi-twitter bIcon"></i></a>
         <a href="http://www.instagram.com" target="_blank" rel="noopener-noreferrer">
           <i class="bi bi-Instagram bIcon"></i></a>
-      
+
+      </div>
     </div>
-  </div>
-</footer>
+  </footer>
 
 
-<!--footer end-->
+  <!--footer end-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
